# learn_web3_in_meta_node

./: README.md
golang-base/task3/: SQL.sql  docker-compose.yml  go.mod  main.go  readme.md  sqlx.go
golang-base/task3/mysql-init/: 0.sql
golang-base/task4/: .gitignore  CLAUDE.md  JWT_TEST_USAGE.md  PYTHON_TESTS_SETUP.md  README.md  README_PYTHON_TESTS.md  docker-compose.yml  go.mod  go.sum  main.go  pyproject.toml  run_tests.py  test_jwt_detailed.py  test_jwt_expiration.py
golang-base/task4/api/: api.go  comment.go  post.go  user.go
golang-base/task4/middleware/: middleware.go
golang-base/task4/model/: user.go
golang-base/task4/service/: comment.go  post.go  service.go  user.go
golang-base/task4/tests/: __init__.py  auth_helper.py  base_test.py  test_comment_api.py  test_comprehensive.py  test_post_api.py  test_user_api.py
solidity-base/task1/: revString.sol  voting.sol
