[project]
name = "blog-api-tests"
version = "0.1.0"
description = "Python HTTP API tests for the blog system"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "colorama>=0.4.6",
]

[project.scripts]
run-tests = "run_tests:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tests"]
include = [
    "run_tests.py",
    "tests/",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
]